[package]
name = "tagaton"
version = "0.1.0"
authors = ["Omar Ferrer <omar.ferrer.uprm@gmail.com>"]

[dependencies]
rusqlite = "0.7.3"
log = "0.3.6"
flexi_logger = "0.5.0"
toml = "0.2.1"
persistent = "0.2.0"

[dependencies.iron]
version = "0.4.0"
default-features = true
#features = ["ssl"]


[dependencies.hyper]
version = "0.9.10"
default-features = false

