[package]
name = "tagaton"
version = "0.1.0"
authors = ["Omar Ferrer <omar.ferrer.uprm@gmail.com>"]

[dependencies]
log = "0.3.6"
time = "0.1.35"
flexi_logger = "0.5.0"
persistent = "0.2.0"
router = "0.4.0"
lazy_static = "0.1.*"
r2d2 = "0.7.0"
rustc-serialize = "0.3.19"
unicase = "1.4.0"
toml = "0.2.1"
crossbeam = "0.2.10"
params = "0.5.0"

[dependencies.iron]
version = "0.4.0"
default-features = true
#features = ["ssl"]

[dependencies.r2d2_sqlite]
path = "EXTERNAL_DEPENDENCIES/r2d2-sqlite"

[dependencies.hyper]
version = "0.9.10"
default-features = false

[dependencies.rusqlite]
path = "EXTERNAL_DEPENDENCIES/rusqlite"
features = ["bundled"]
